--- a/LeckerBag/WebContent/mein_profil_kunde.html
+++ b/LeckerBag/WebContent/mein_profil_kunde.html
@@ -57,7 +57,7 @@
                                         <button id="btn_profil_kunde_save" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilKunde(true)" style="display:none" data-pg-collapsed>
                                             <i class="fa fa-check"></i>
                                         </button>
-                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed>
+                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kunde.html'">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </button>                                         
                                     </div>
@@ -138,7 +138,7 @@
                                                         </button>                                                         
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='profil_loeschen_kind.html'">
                                                             <i class="glyphicon glyphicon-trash"></i>
                                                         </button>                                                         
                                                     </td>
@@ -160,7 +160,7 @@
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='profil_loeschen_kind.html'">
                                                             <i class="glyphicon glyphicon-trash"></i>
                                                         </button>
                                                     </td>
@@ -182,7 +182,7 @@
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='profil_loeschen_kind.html'">
                                                             <i class="glyphicon glyphicon-trash"></i>
                                                         </button>
                                                     </td>                                                     
@@ -191,7 +191,7 @@
                                         </table>
                                     </div>
                                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right">
-                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='profil_loeschen_kind.html'">
+                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='kind_bearbeiten.html'">
                                             <span></span> Kind hinzufügen 
                                         </button>                                         
                                     </div>
