--- a/LeckerBag/WebContent/profil_loeschen_kunde.html
+++ b/LeckerBag/WebContent/profil_loeschen_kunde.html
@@ -63,8 +63,8 @@
                                         </div>                                         
                                     </div>
                                     <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6 text-right last_element_dash div_buttons button_3">
-                                        <button class="button_paulo button_paulo_3" name="abbrechen">Abbrechen</button>
-                                        <button class="button_paulo" name="abbrechen">Löschen</button>                                         
+                                        <button class="button_paulo button_paulo_3" name="abbrechen" onclick="location.href='mein_profil_kunde.html'">Abbrechen</button>
+                                        <button class="button_paulo" name="abbrechen" onclick="location.href='profil_geloescht_kunde.html'">Löschen</button>                                         
                                     </div>
                                 </div>
                             </div>
