--- a/LeckerBag/WebContent/profil_geloescht_kind.html
+++ b/LeckerBag/WebContent/profil_geloescht_kind.html
@@ -11,21 +11,21 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script> 
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script> 
+		</script>         
     </head>     
-    <body>                   
+    <body> 
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                            <h3>Kind entfernt</h3>
+                            <h3>Kind gelöscht</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -34,20 +34,6 @@
                         </div>
                     </div>
                     <hr class="hr_line"/>
-                    <ol class="breadcrumb" data-pg-collapsed> 
-                        <li>
-                            <a href="dashboard_kunde.html">Mein Leckerbag</a>
-                        </li>                         
-                        <li>
-                            <a href="mein_profil_kunde.html">Mein Profil</a>
-                        </li>                         
-                        <li>
-                            <a href="profil_kind.html">Mein Kind</a>
-                        </li>
-                        <li>
-                            <font>Mein Kind bearbeiten</font>
-                        </li>
-                    </ol>
                     <div class="row" data-pg-collapsed>
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
@@ -66,13 +52,13 @@
                     </div>
                 </div>                 
             </div>
-        </div>      
-        <div class="row" id="footer"></div> 
+        </div>         
+        <div class="row" id="footer"></div>         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>     
+        </script>         
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
