--- a/LeckerBag/WebContent/registrierung.html
+++ b/LeckerBag/WebContent/registrierung.html
@@ -11,7 +11,7 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
-        <script src="js/jquery.js"></script> 
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
 			  $("#header").load("header.html"); 
@@ -20,7 +20,7 @@
 		</script>         
     </head>     
     <body>
-    <div class="row" id="header"></div>          
+        <div class="row" id="header"></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -64,10 +64,10 @@
                                     <div class="row">
                                         <div class="col-md-12 col-xs-11 col-sm-12 col-lg-12"> 
                                             <label style="margin-top: 10px; margin-bottom: 15px" data-pg-name="Checkbox: AGBs" data-pg-collapsed=""> 
-                                                <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                &nbsp;Ich bestätige, die AGB der Firma "LeckerBag"
+                                                <input class="control-label" type="checkbox" value="">                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;Ich bestätige, die AGB der Firma "LeckerBag"
                                             </label>                                             
                                         </div>
-                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-right"> 
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-right last_element_dash div_buttons"> 
                                             <button type="button" class="btn btn-default button_paulo" style="margin-top: 10px; margin-bottom: 15px" onclick="location.href='dashboard_kunde.html'">Account erstellen</button>                                             
                                         </div>
                                     </div>                                     
@@ -79,14 +79,13 @@
             </div>
         </div>         
         <div class="row" id="footer"></div>
-        <!-- Ende des Dokumentes -->  
+        <!-- Ende des Dokumentes -->         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(5);
 	        });
-        </script>            
-                       
+        </script>         
         <script src="js/bootstrap.js"></script>         
-        <script src="js/functions.js"></script>        
+        <script src="js/functions.js"></script>         
     </body>     
 </html>
