--- a/LeckerBag/WebContent/1_details_abo.html
+++ b/LeckerBag/WebContent/1_details_abo.html
@@ -16,10 +16,10 @@
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body> 
-    	<div class="row" id="header"></div> 
+        <div class="row" id="header"></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                &nbsp;
+                        </li>                                                                                                                        &nbsp;
                         <li>&nbsp;Details des Abonnement &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -95,8 +95,8 @@
                                             </div>
                                             <div class="row text-left" style="margin-top: 30px">
                                                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-                                                    <button type="button" class="btn-default button_paulo_3 button_paulo" data-pg-name="Button: Suchen" style="margin-bottom: 5px">Abbrechen</button>                                                                                                                                                       
-                                                    <button type="button" class="button_paulo" data-pg-name="Button: " style="margin-bottom: 5px; margin-right:5px;" onclick="location.href='bestellung_kunde.html'">Bearbeiten</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+                                                    <button type="button" class="btn-default button_paulo_3 button_paulo" data-pg-name="Button: Suchen" style="margin-bottom: 5px" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                     
+                                                    <button type="button" class="button_paulo" data-pg-name="Button: " style="margin-bottom: 5px; margin-right:5px;" onclick="location.href='bestellung_kunde.html'">Bearbeiten</button>                                                     
                                                     <button type="button" class="button_paulo" data-pg-name="Button: Suchen" style="margin-bottom: 5px; margin-right: 8px; ">Drucken</button>
                                                 </div>
                                             </div>                                             
@@ -253,14 +253,14 @@
                     <strong><strong></strong></strong>
                 </div>                 
             </div>
-        </div>    
+        </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>      
+        </script>         
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
