--- a/LeckerBag/WebContent/4_stornierung_bag.html
+++ b/LeckerBag/WebContent/4_stornierung_bag.html
@@ -16,10 +16,10 @@
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body>
-    <div class="row" id="header"></div> 
+        <div class="row" id="header"></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -44,7 +44,7 @@
                         </li>
                         <li>&nbsp;
                             <a href="1_details_abo.html">Details des Abonnement&nbsp;</a>
-                        </li>                                                                                                                                                                                                                            &nbsp;
+                        </li>                                                                                                                                                                                                                                                                            &nbsp;
                         <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -111,8 +111,8 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
-                                            <button type="button" class="btn btn-default button_paulo">Stornieren</button>
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='1_details_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Stornieren</button>
                                         </div>
                                     </div>                                     
                                 </div>
@@ -128,7 +128,7 @@
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>              
+        </script>         
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
