--- a/LeckerBag/WebContent/5_stornierung_abo.html
+++ b/LeckerBag/WebContent/5_stornierung_abo.html
@@ -9,17 +9,17 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
         <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet"> 
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>              
+		</script>         
     </head>     
     <body> 
-   		<div class="row" id="header"></div>
+        <div class="row" id="header"></div>
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                &nbsp;
+                        </li>                                                                                                                                                                                                                                                        &nbsp;
                         <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -105,8 +105,8 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
-                                            <button type="button" class="btn btn-default button_paulo">Stornieren</button>
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html">Stornieren</button>
                                         </div>
                                     </div>                                     
                                 </div>
@@ -115,14 +115,14 @@
                     </div>
                 </div>                 
             </div>
-        </div>   
+        </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>                
+        </script>         
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
