--- a/LeckerBag/WebContent/6_rezension_abo.html
+++ b/LeckerBag/WebContent/6_rezension_abo.html
@@ -41,7 +41,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                    &nbsp;
+                        </li>                                                                                                                                                                            &nbsp;
                         <li>&nbsp;Ihre Rezension &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -72,8 +72,8 @@
                                     </div>
                                     <div class="row text-right">
                                         <div class="col-xs-12 col-sm-12 text-right col-md-12 col-lg-12"> 
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
-                                            <button type="button" class="btn btn-default button_paulo">Senden</button>
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Senden</button>
                                         </div>
                                     </div>                                     
                                 </div>
