--- a/LeckerBag/WebContent/8_lieferant_rezension_dash.html
+++ b/LeckerBag/WebContent/8_lieferant_rezension_dash.html
@@ -13,7 +13,7 @@
         <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
+			  $("#header").load("header2.html"); 
 			  $("#footer").load("footer.html"); 
 			});
 		</script>         
