--- a/LeckerBag/WebContent/bestellung_kunde_s2.html
+++ b/LeckerBag/WebContent/bestellung_kunde_s2.html
@@ -253,8 +253,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right" data-pg-collapsed>
-                                        <button type="button" class="btn btn-default button_paulo button_paulo_3">Abbrechen</button>
-                                        <button type="button" class="btn btn-default button_paulo">Abschliessen</button>                                         
+                                        <button type="button" class="btn btn-default button_paulo button_paulo_3" onclick="location.href='dashboard_kunde.html'">Abbrechen</button>
+                                        <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abschliessen</button>                                         
                                     </div>
                                 </div>
                             </div>
