--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -22,7 +22,7 @@
     <!-- Scheduler -->
     <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
+			  $("#header").load("header2.html"); 
 			  $("#footer").load("footer.html");
 			});
 		</script>     
@@ -98,7 +98,7 @@
                                             <span class="fa fa-star-half-empty star_green fa-lg"></span>
                                         </div>
                                         <div data-pg-collapsed>
-                                            <a href="#"><span class="fa fa-user"></span>&nbsp;702 total votes</a>
+                                            <a href="8_lieferant_rezension_dash.html"><span class="fa fa-user"></span>&nbsp;702 total votes</a>
                                         </div>
                                     </div>                                     
                                 </div>
