--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -12,7 +12,7 @@
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
     </head>     
-    <body>                   
+    <body> 
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -131,8 +131,8 @@
                                                 </ul>
                                             </div>
                                             <div class="text-right col-sm-12 col-md-12 col-lg-12 col-xs-12" data-pg-collapsed>
-                                                <button class="button_paulo btn_default button_paulo_3" name="abbrechen">abbrechen</button>
-                                                <button class="button_paulo btn_default" name="abbrechen">speichern</button>                                                 
+                                                <button class="button_paulo btn_default button_paulo_3" name="abbrechen">Abbrechen</button>
+                                                <button class="button_paulo btn_default" name="abbrechen">Speichern</button>                                                 
                                             </div>
                                         </div>
                                     </div>
