--- a/LeckerBag/WebContent/2_uebersicht_abo.html
+++ b/LeckerBag/WebContent/2_uebersicht_abo.html
@@ -16,11 +16,11 @@
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body>
-    	<div class="row" id="header"></div> 
-        <div class="row" data-pg-collapsed>
+        <div class="row" id="header"></div>         
+        <div class="row">
             <div class="col-md-12 abo_border_bottom">
                 <div class="container wrapper">
                     <div class="row">
@@ -91,47 +91,7 @@
                                                     <a>166168343</a>
                                                 </div>
                                             </div>
-                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px">
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'" >Details</button>
-                                                </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'" >Bewerten</button>
-                                                </div>
-                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'" >Stornieren</button>
-                                                </div>
-                                                <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
-                                                    <i class="fa fa-star logo_info fa-lg"></i>
-                                                    <i class="fa fa-star logo_info fa-lg"></i>
-                                                    <i class="fa fa-star logo_info fa-lg"></i>
-                                                    <i class="fa fa-star-o logo_info fa-lg"></i>
-                                                    <i class="fa fa-star-o logo_info fa-lg"></i> 
-                                                </div>
-                                            </div>                                             
-                                        </div>
-                                    </div>
-                                    <div class="row" style="margin-bottom: 20px">
-                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px">
-                                            <div class="row border_abo abo_border abo_color" data-pg-collapsed>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
-                                                    <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
-                                                </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
-                                                    <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
-                                                </div>
-                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
-                                                    <h4>Bestelldatum<br></h4>
-                                                    <p>27.04.2015</p>
-                                                </div>
-                                                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3" data-pg-collapsed="">
-                                                    <h4>Abonnement<br></h4>
-                                                    <a>166168343</a>
-                                                </div>
-                                            </div>
-                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px" data-pg-collapsed>
+                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;">
                                                 <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
                                                 </div>
@@ -171,7 +131,47 @@
                                                     <a>166168343</a>
                                                 </div>
                                             </div>
-                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px" data-pg-collapsed>
+                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;" data-pg-collapsed>
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Stornieren</button>
+                                                </div>
+                                                <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
+                                                    <i class="fa fa-star logo_info fa-lg"></i>
+                                                    <i class="fa fa-star logo_info fa-lg"></i>
+                                                    <i class="fa fa-star logo_info fa-lg"></i>
+                                                    <i class="fa fa-star-o logo_info fa-lg"></i>
+                                                    <i class="fa fa-star-o logo_info fa-lg"></i> 
+                                                </div>
+                                            </div>                                             
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-bottom: 20px">
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="margin-bottom: 15px">
+                                            <div class="row border_abo abo_border abo_color" data-pg-collapsed>
+                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                    <h4>Kind<br></h4>
+                                                    <a>Hans-Jürgen</a>
+                                                </div>
+                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                    <h4>Lieferant<br></h4>
+                                                    <a>Bäcker Bob</a>
+                                                </div>
+                                                <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                    <h4>Bestelldatum<br></h4>
+                                                    <p>27.04.2015</p>
+                                                </div>
+                                                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3" data-pg-collapsed="">
+                                                    <h4>Abonnement<br></h4>
+                                                    <a>166168343</a>
+                                                </div>
+                                            </div>
+                                            <div class="row abo_border abo_border_bottom" style="padding-bottom: 15px; padding-top: 15px; border-bottom: 1px solid #ddd;" data-pg-collapsed>
                                                 <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Details</button>
                                                 </div>
@@ -197,15 +197,15 @@
                     </div>
                 </div>                 
             </div>
-        </div>               
+        </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>      
-        <!-- Ende des Dokumentes -->                 
+        </script>         
+        <!-- Ende des Dokumentes -->         
         <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
