--- a/LeckerBag/WebContent/header.html
+++ b/LeckerBag/WebContent/header.html
@@ -60,7 +60,7 @@
                                             <a href="#">Kontakt</a> 
                                         </li>                                         
                                         <li class="nav_item" id="nav_item_last"> 
-                                            <a href="login.html">Registrieren</a> 
+                                            <a href="login.html">Anmelden</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </div>                                 
