--- a/LeckerBag/WebContent/index.html
+++ b/LeckerBag/WebContent/index.html
@@ -49,23 +49,23 @@
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-star">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">#1.</font> Wähle eine Bäckerei<br> in Deiner Nähe aus</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">1.</font> Wähle eine Bäckerei<br> in Deiner Nähe aus</p>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-cutlery">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">#2.</font> Stelle für Dein Kind<br> individuelle Bags zusammen&nbsp;</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">2.</font> Stelle für Dein Kind<br> individuelle Bags zusammen&nbsp;</p>
                             <br>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-calendar-o">&nbsp;</i><br></h3> 
-                            <p class="text-center"><font style="font-weight:900; font-size:32px">#3.</font> Wann soll Dein Kind<br> die LeckerBags erhalten</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">3.</font> Wann soll Dein Kind<br> die LeckerBags erhalten</p>
                             <br>
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-thumbs-o-up">&nbsp;</i><br></h3> 
-                            <p class="text-center">Ihr Kind,<br> gut versorgt mit &nbsp;Leckerbag&nbsp;</p>
+                            <p class="text-center"><font style="font-weight:900; font-size:32px">4.</font> Ihr Kind,<br> gut versorgt mit &nbsp;Leckerbag&nbsp;</p>
                             <br>
                         </div>
                     </div>
@@ -112,15 +112,15 @@
                             <p id="lauftext_c5">Hier erfährst du täglich Neuigkeiten aus rund um die Themen gesunde Ernährung, Kinder-Frühstück und LeckerBag</p>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4" data-pg-collapsed>
-                            <img src="pics/bg_4.jpg" width="100%">
+                            <img src="pics/startseite_0.jpg" width="100%">
                             <p class="text-center untertitel_c5"><a href="">Grundsätze ausgewogener Ernährung</a></p>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4" data-pg-collapsed>
-                            <img src="pics/startseite_2.png" width="100%">
+                            <img src="pics/startseite_2.jpg" width="100%">
                             <p class="text-center untertitel_c5"><a href="">Lieferung direkt in die Schule</a></p>
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-12 col-lg-4">
-                            <img src="pics/startseite_3.png" width="100%">
+                            <img src="pics/startseite_3.jpg" width="100%">
                             <p class="text-center untertitel_c5"><a href="">Lieferung an regionalen Feiertagen</a></p>
                         </div>
                     </div>
