--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -11,8 +11,17 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
+        <script src="js/jquery.js"></script>         
+        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+        <script> 
+			$(function(){
+			  $("#header").load("header.html"); 
+			  $("#footer").load("footer.html");
+			});
+		</script>         
     </head>     
-    <body> 
+    <body>
+        <div class="row" id="header" data-pg-collapsed></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -42,98 +51,77 @@
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12" data-pg-collapsed>
-                                        <h4>Wählen Sie die gewünschten Schulen aus</h4>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
-                                        <div class="form-group" data-pg-collapsed> 
-                                            <label class="control-label" for="formInput38">Bundesland</label>                                             
-                                            <select id="formInput38" class="form-control" data-pg-collapsed> 
-                                                <option>Bayern</option>                                                 
-                                                <option>Hessen</option>                                                 
-                                                <option>Saarland</option>                                                 
-                                            </select>
+                                    <div class="row" data-pg-collapsed>
+                                        <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12" data-pg-collapsed>
+                                            <h4>Wählen Sie die gewünschten Schulen aus</h4>
                                         </div>
-                                        <div class="form-group" data-pg-collapsed> 
-                                            <label class="control-label" for="formInput42">Schulform</label>                                             
-                                            <select id="formInput42" class="form-control"> 
-                                                <option>Grundschule</option>                                                 
-                                                <option>Realschule</option>                                                 
-                                                <option>Gymnasium</option>                                                 
-                                            </select>
-                                        </div>                                         
+                                        <div class="col-md-6 col-lg-6 schulen_element col-sm-12 col-xs-12" data-pg-collapsed>
+                                            <div class="form-group" data-pg-collapsed> 
+                                                <label class="control-label" for="formInput38">Bundesland</label>                                                 
+                                                <select id="formInput38" class="form-control" data-pg-collapsed> 
+                                                    <option>Bayern</option>                                                     
+                                                    <option>Hessen</option>                                                     
+                                                    <option>Saarland</option>                                                     
+                                                </select>
+                                            </div>
+                                            <div class="form-group" data-pg-collapsed> 
+                                                <label class="control-label" for="formInput42">Schulform</label>                                                 
+                                                <select id="formInput42" class="form-control"> 
+                                                    <option>Gymnasium</option>                                                     
+                                                    <option>Realschule</option>                                                     
+                                                    <option>Grundschule</option>                                                     
+                                                </select>
+                                            </div>                                             
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 schulen_element col-sm-12 col-xs-12" data-pg-collapsed>
+                                            <div class="form-group" data-pg-collapsed> 
+                                                <label class="control-label" for="formInput48">Ort</label>                                                 
+                                                <select id="formInput48" class="form-control"> 
+                                                    <option>Würzburg</option>                                                     
+                                                    <option>München</option>                                                     
+                                                    <option>Augsburg</option>                                                     
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 text-center schulen_map" data-pg-collapsed>
+                                                <div id="schulen_map" style="width: 420px; height: 420px;"></div>                                                 
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
-                                        <div class="form-group"> 
-                                            <label class="control-label" for="formInput48">Ort</label>                                             
-                                            <select id="formInput48" class="form-control"> 
-                                                <option>Würzburg</option>                                                 
-                                                <option>München</option>                                                 
-                                                <option>Augsburg</option>                                                 
-                                            </select>
-                                        </div>                                         
-                                    </div>
-                                    <div class="col-lg-12 col-md-12 profil_kindliste col-sm-6 col-xs-6">
+                                    <div class="row">
                                         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" data-pg-collapsed>
                                             <h4>Schulen wählen</h4> 
                                         </div>
-                                        <div class="row">
-                                            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6 list_scroll">
-                                                <ul class="list-group"> 
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label data-pg-collapsed> 
-                                                            <input class="control-label" type="checkbox" value="">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grundschule Süd
-                                                        <b>Straße:</b> Neubaustraße 2 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label> 
-                                                            <input class="control-label" type="checkbox" checked="checked">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grundschule Mitte 
-                                                        <b>Straße:</b> Kaiserstraße 35 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>                                                     
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label data-pg-collapsed> 
-                                                            <input class="control-label" type="checkbox" value="">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grunschule West
-                                                        <b>Straße:</b> Semmelstraße 22 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label data-pg-collapsed> 
-                                                            <input class="control-label" type="checkbox" value="">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grunschule West
-                                                        <b>Straße:</b> Semmelstraße 22 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label data-pg-collapsed> 
-                                                            <input class="control-label" type="checkbox" value="">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grunschule West
-                                                        <b>Straße:</b> Semmelstraße 22 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>
-                                                    <li class="list-group-item" data-pg-collapsed>
-                                                        <label data-pg-collapsed> 
-                                                            <input class="control-label" type="checkbox" value="">                                                             
-                                                        </label>                                                         
-                                                        <b>Schule:</b> Grunschule West
-                                                        <b>Straße:</b> Semmelstraße 22 
-                                                        <b>Ort:</b> 97070 Würzburg 
-                                                    </li>                                                     
-                                                </ul>
-                                            </div>
-                                            <div class="text-right col-sm-12 col-md-12 col-lg-12 col-xs-12" data-pg-collapsed>
-                                                <button class="button_paulo btn_default button_paulo_3" name="abbrechen">Abbrechen</button>
-                                                <button class="button_paulo btn_default" name="abbrechen">Speichern</button>                                                 
-                                            </div>
+                                        <div class="col-lg-12 col-md-12 list_scroll col-sm-12 col-xs-12">
+                                            <ul class="list-group"> 
+                                                <li class="list-group-item" data-pg-collapsed>
+                                                    <label data-pg-collapsed> 
+                                                        <input class="control-label school_cb" id="school1" type="checkbox" value="1">                                                         
+                                                    </label>                                                     
+                                                    <b>Schule:</b> Wirsberg-Gymnasium
+                                                    <b>Straße:</b> Am Pleidenturm 16
+                                                    <b>Ort:</b> 97070 Würzburg 
+                                                </li>
+                                                <li class="list-group-item" data-pg-collapsed>
+                                                    <label> 
+                                                        <input class="control-label school_cb" id="school2" type="checkbox" value="2">                                                         
+                                                    </label>                                                     
+                                                    <b>Schule:</b> Röntgen-Gymnasium 
+                                                    <b>Straße:</b> Sanderring 8
+                                                    <b>Ort:</b> 97070 Würzburg 
+                                                </li>                                                 
+                                                <li class="list-group-item" data-pg-collapsed>
+                                                    <label data-pg-collapsed> 
+                                                        <input class="control-label school_cb" id="school3" type="checkbox" value="3">                                                         
+                                                    </label>                                                     
+                                                    <b>Schule:</b> Dag-Hammarskjöld-Gymnasium
+                                                    <b>Straße:</b> Frauenlandpl. 5
+                                                    <b>Ort:</b> 97074 Würzburg 
+                                                </li>                                                 
+                                            </ul>
+                                        </div>
+                                        <div class="text-right col-sm-12 col-md-12 col-lg-12 col-xs-12" data-pg-collapsed>
+                                            <button class="button_paulo btn_default button_paulo_3" name="abbrechen">Abbrechen</button>
+                                            <button class="button_paulo btn_default" name="abbrechen">Speichern</button>                                             
                                         </div>
                                     </div>
                                 </div>
@@ -143,9 +131,21 @@
                 </div>                 
             </div>
         </div>         
+        <div class="row" id="footer" data-pg-collapsed></div>
         <!-- Ende des Dokumentes -->         
-        <script src="js/jquery.js"></script>         
+        <script>
+	        $("#header").load("header.html", function(){
+	        	setNav(2);
+	        	autoCenter();
+	        	var checkboxes = document.getElementsByClassName("school_cb");
+	        	for(var i=0; i<checkboxes.length; i++){
+	        		checkboxes[i].addEventListener("change", school_get_checked);
+	        	}
+	        });  
+        </script>
+        <script src="js/jquery.js"></script>
         <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
+        <script src="js/lieferant_maps_schulauswahl.js"></script>         
     </body>     
 </html>
